--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Hello! | tozaiuser.github.io</title>
-<p>github.ioの中身はQiitaに移しました。
+<p>github.ioの中身はブログおよびQiitaに移しました。
+<p><a href="http://tozaiuser.hatenablog.jp/">はてなブログ</a>
 <p><a href="http://qiita.com/tozaiuser">Qiita: tozaiuser</a>
 <p><a href="https://twitter.com/tz_liner">Twitter: @tz_liner</a>
+<br>
+<p><a href="./rail.html">鉄道写真館（いつか作るよ）</a>
